k8-manifestfile/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000 
      name: service
  selector:
    app.kubernetes.io/name: grafana

---

apiVersion: v1
kind: Service
metadata:
 name: prometheius-service
 namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
      name: prometheiusservice
  selector:
    app.kubernetes.io/name: prometheus
